[metadata]
name = gitbyatruck
author = Ryan Brown
author-email = sb@ryansb.com
summary = Git by a truck
description-file = README.md
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    git
    gitbyabus
    gitbyatruck
[files]
packages = gitbyatruck
[entry_points]
console_scripts =
    gitbyatruck = gitbyatruck.cli:cli
