[metadata]
name = gitbyatruck
author = Ryan Brown
author-email = sb@ryansb.com
summary = Git by a truck
description-file = README.md
license = AGPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords =
    git
    gitbyabus
    gitbyatruck
[files]
packages = gitbyatruck
extra_files =
    gitbyatruck/backend/procedures/calculate_knowledge.sql
    README.md
[entry_points]
paste.app_factory =
    main = gitbyatruck:main

console_scripts =
    gitbyatruck = gitbyatruck.cli:cli
    initialize_gitbyatruck_db = gitbyatruck.scripts.initializedb:main
